<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent">

    <include layout="@layout/header_with_back"
        android:id="@+id/header"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:keepScreenOn="true"
        android:scrollbars="none"
        android:layout_below="@+id/header">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:orientation="vertical">

            <TextView
                android:layout_marginTop="20sp"
                style="@style/tv_farmer"
                android:text="@string/txt_farmer"/>

            <EditText style="@style/et_farmer"
                android:id="@+id/et_name"
                android:hint="@string/txt_farmer_1"/>

            <EditText style="@style/et_farmer"
                android:id="@+id/et_last_name_a"
                android:hint="@string/txt_farmer_2"/>

            <EditText style="@style/et_farmer"
                android:id="@+id/et_last_name_b"
                android:hint="@string/txt_farmer_3"/>

            <TextView
                android:layout_marginTop="20sp"
                style="@style/tv_farmer"
                android:text="@string/txt_contact"/>

            <EditText style="@style/et_farmer"
                android:id="@+id/et_e_mail"
                android:inputType="textEmailAddress"
                android:hint="@string/txt_farmer_4"/>

            <EditText style="@style/et_farmer"
                android:id="@+id/et_cell"
                android:inputType="phone"
                android:hint="@string/txt_farmer_6"/>

            <TextView
                android:layout_marginTop="20sp"
                style="@style/tv_farmer"
                android:text="@string/txt_location"/>

            <Button style="@style/et_farmer"
                android:id="@+id/btn_state"
                android:drawableRight="@drawable/ic_arrow"
                android:hint="@string/txt_sell_2"/>

            <Button style="@style/et_farmer"
                android:id="@+id/btn_municipality"
                android:drawableRight="@drawable/ic_arrow"
                android:hint="@string/txt_sell_3"/>

            <EditText style="@style/et_farmer"
                android:id="@+id/et_address"
                android:hint="@string/txt_farmer_10"/>

            <EditText style="@style/et_farmer"
                android:id="@+id/et_zip"
                android:hint="@string/txt_farmer_11"
                android:inputType="number"/>

            <TextView
                android:layout_marginTop="20sp"
                style="@style/tv_farmer"
                android:text="@string/txt_location"/>

            <EditText style="@style/et_farmer"
                android:id="@+id/et_company"
                android:hint="@string/txt_farmer_7"/>

            <EditText style="@style/et_farmer"
                android:id="@+id/et_rfc"
                android:maxLength="13"
                android:hint="@string/txt_farmer_8"/>

            <EditText style="@style/et_farmer"
                android:id="@+id/et_id"
                android:hint="@string/txt_farmer_9"/>

            <RelativeLayout android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20sp"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="50sp"
                    android:layout_height="50sp"
                    android:background="@drawable/register_photo"
                    android:id="@+id/add_iv_farmer"
                    android:layout_margin="10sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50sp"
                    android:layout_marginTop="10sp"
                    android:layout_marginBottom="10sp"
                    android:gravity="left|center_vertical"
                    android:text="@string/txt_photo"
                    android:id="@+id/txt_photo"
                    android:layout_toRightOf="@+id/add_iv_farmer"
                    android:layout_toEndOf="@+id/add_iv_farmer"/>

                <ImageView
                    android:layout_width="50sp"
                    android:layout_height="50sp"
                    android:background="@drawable/register_photo"
                    android:id="@+id/add_iv_contract"
                    android:layout_margin="10sp"
                    android:layout_below="@+id/add_iv_farmer"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50sp"
                    android:layout_marginTop="10sp"
                    android:layout_marginBottom="10sp"
                    android:gravity="left|center_vertical"
                    android:text="@string/txt_contract"
                    android:layout_below="@+id/txt_photo"
                    android:layout_toRightOf="@+id/add_iv_contract"
                    android:layout_toEndOf="@+id/add_iv_contract"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/add_iv_contract"
                    android:layout_marginLeft="20sp"
                    android:layout_marginStart="20sp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="right"
                        android:id="@+id/ll_alerts">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:text="@string/txt_alerts"/>

                        <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/checkbox_alerts"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="right"
                        android:id="@+id/ll_terms"
                        android:layout_below="@+id/ll_alerts">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:text="@string/txt_terms"/>

                        <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/checkbox_terms"/>

                    </LinearLayout>


                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/button_login"
                        android:text="@string/btn_send"
                        android:textSize="12sp"
                        android:padding="2sp"
                        android:layout_below="@+id/ll_terms"
                        android:layout_centerHorizontal="true"
                        android:textColor="@color/colorWhite"
                        android:onClick="saveFarmer"
                        android:id="@+id/btn_add_farmer"/>

                </RelativeLayout>

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
