<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_name"
            style="@style/et_farmer"
            android:layout_marginTop="30sp"
            android:hint="@string/txt_farmer_1" />

        <EditText
            android:id="@+id/et_last_name_a"
            style="@style/et_farmer"
            android:hint="@string/txt_farmer_2" />

        <EditText
            android:id="@+id/et_last_name_b"
            style="@style/et_farmer"
            android:hint="@string/txt_farmer_3" />


        <EditText
            android:id="@+id/et_e_mail"
            style="@style/et_farmer"
            android:hint="@string/txt_farmer_4"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/et_pass"
            style="@style/et_farmer"
            android:hint="Contraseña"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/et_confirm_pass"
            style="@style/et_farmer"
            android:hint="Confirmar contraseña"
            android:inputType="textPassword" />


        <Button
            android:id="@+id/btn_update_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10sp"
            android:background="@drawable/button_login"
            android:padding="2sp"
            android:text="@string/btn_send"
            android:textColor="@color/colorWhite"
            android:textSize="12sp" />


    </LinearLayout>

</RelativeLayout>
