<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent">

    <include layout="@layout/header_with_back"
        android:id="@+id/header"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/pleca_green"
        android:id="@+id/pleca_green"
        android:layout_below="@id/header"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@drawable/pleca_blue"
        android:layout_below="@+id/pleca_green"
        android:id="@+id/pleca_blue"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFFFFF"
            android:layout_below="@+id/header"
            android:layout_toRightOf="@+id/pleca_blue"
            android:layout_toEndOf="@+id/pleca_blue"
            android:orientation="vertical">

            <EditText style="@style/et_farmer"
                android:id="@+id/txt_bill"
                android:layout_marginTop="20sp"
                android:hint="@string/txt_sell_1"/>

            <Button style="@style/et_farmer"
                android:id="@+id/btn_state"
                android:drawableRight="@drawable/ic_arrow"
                android:hint="@string/txt_sell_2"/>

            <Button style="@style/et_farmer"
                android:id="@+id/btn_municipality"
                android:drawableRight="@drawable/ic_arrow"
                android:hint="@string/txt_sell_3"/>

            <Button style="@style/et_farmer"
                android:id="@+id/btn_variety"
                android:drawableRight="@drawable/ic_arrow"
                android:inputType="textEmailAddress"
                android:hint="@string/txt_sell_4"/>

            <EditText style="@style/et_farmer"
                android:id="@+id/txt_seed_lote"
                android:inputType="text"
                android:hint="Lote de semilla"/>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <EditText style="@style/et_farmer"
                    android:id="@+id/txt_cantity"
                    android:inputType="phone"
                    android:hint="@string/txt_sell_5"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Sacos"
                    android:layout_centerVertical="true"
                    android:layout_alignEnd="@+id/txt_cantity"
                    android:layout_alignRight="@+id/txt_cantity"/>

            </RelativeLayout>


            <Button style="@style/et_farmer"
                android:id="@+id/btn_sell_type"
                android:drawableRight="@drawable/ic_arrow"
                android:hint="@string/txt_sell_6"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10sp"
                android:background="@drawable/button_login"
                android:text="@string/btn_send"
                android:textSize="12sp"
                android:padding="2sp"
                android:textColor="@color/colorWhite"
                android:id="@+id/btn_add_sell"/>


        </LinearLayout>

</RelativeLayout>
